feat(scheduling): 优化教师导入模板和示例数据准备
- 更新教师导入模板，增加教师类型和单位数据
- 重构示例数据准备逻辑，获取所有部门并设置默认值
- 优化导入模板生成，动态添加教师类型和单位数据
- 调整导入注意事项说明，提高用户填写准确性